force-app/main/default/objects/SRM_Metadata_Conflict_Warning__mdt/SRM_Metadata_Conflict_Warning__mdt.object-meta.xml
<CustomObject>
    <label>SRM Metadata Conflict Warning</label>
    <pluralLabel>SRM Metadata Conflict Warnings</pluralLabel>
</CustomObject>