force-app/main/default/objects/SRM_Metadata_Conflict_Warning__mdt/fields/Friendly_Message__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Message__c</fullName>
    <label>Friendly Message</label>
    <type>TextArea</type>
</CustomField>