force-app/main/default/objects/SRM_Metadata_Conflict_Warning__mdt/fields/SRM_Field__c.field-meta.xml
<CustomField>
    <fullName>SRM_Field__c</fullName>
    <label>SRM Field</label>
    <metadataRelationshipControllingField>SRM_Metadata_Conflict_Warning__mdt.SRM_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SRM_Metadata_Conflict_Warnings</relationshipLabel>
    <relationshipName>SRM_Metadata_Conflict_Warnings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>