force-app/main/default/objects/SRM_Metadata_Conflict_Warning__mdt/fields/SRM_Object__c.field-meta.xml
<CustomField>
    <fullName>SRM_Object__c</fullName>
    <label>SRM Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SRM_Metadata_Conflict_Warnings</relationshipLabel>
    <relationshipName>SRM_Metadata_Conflict_Warnings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>