force-app/main/default/objects/SRM_Metadata_Conflict_Warning__mdt/fields/Warning__c.field-meta.xml
<CustomField>
    <fullName>Warning__c</fullName>
    <label>Warning</label>
    <type>TextArea</type>
</CustomField>